<resources>
    <string name="app_name">paste-it</string>

    <!-- Strings related to login -->
    <string name="web_client_id" translatable="false">634260169983-g5sq00jghrmqj5ta20fphir5kbu3bacc.apps.googleusercontent.com</string>
    <string name="paste_it">Paste It!</string>


    <string name="key_paste">paste</string>
    <string name="key_image_model_updated">image_model_updated</string>
    <string name="key_dload_uri_available">key_dload_uri_available</string>
    <string name="key_ll_os">key_ll_os</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_dialog_message">Deleting this tag will remove it from all your content. Proceed ?</string>
    <string name="tag_tag_fragment">tag_tag_fragment</string>
    <string name="tag_pasteit_fragment">TagAdapter tagAdapter = (TagAdapter)rvTags.getAdapter();</string>
    <string name="error_message_nowhitespace">Whitespaces are not allowed.</string>
    <string name="tag_fragment_confirmdeletedialog">ConfirmDeleteDialog</string>
    <string name="error_message_tag_length">Tags must have a minimum length of 3 characters.</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>
    <string name="key_rvos">rvos</string>
    <string name="rvOsDrawer">key_rvOsDrawer</string>
    <string name="pastes">Pastes</string>
    <string name="archived">Archived</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="key_section">key_section</string>
    <string name="selection_position">selection_position</string>
    <string name="tag">tag</string>
    <string name="key_selected_items">key_selected_items</string>
    <string name="key_action_mode_started">key_action_mode_started</string>
    <string name="is_swipe_refreshing">is_swipe_refreshing</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->


    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="daily">Daily</string>
    <string name="pref_key_show_notification">pref_key_show_notification</string>
    <string name="key_image_models">key_image_models</string>
    <string name="key_position">key_position</string>
    <string name="confirm_dialog_picture">Are you sure you want to delete this image?</string>
    <string name="key_sp_image_removed_id" />
    <string name="app_version">v1.0</string>
    <string name="open_source_statement">Following open source libraries were used in developing this application:</string>
    <string name="send_to">Send to</string>
    <string name="license">License: %1$s</string>
    <string name="website">Website: %1$s</string>
    <string name="configure">Configure Widget Settings</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_item_count_error">\"Item count must be an Integer between 3 and 8\"</string>
    <string name="logo_description">App Logo</string>
    <string name="app_tagline">All your content in one place.</string>
    <string name="imported_image">Imported Image</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="create_a_new_tag">Create a new Tag</string>
    <string name="image_from_paste">Image from paste</string>
    <string name="empty_text">It\'s lonely out here…</string>
    <string name="empty_image">No Items to Show</string>
    <string name="section_icon">Section Icon</string>
    <string name="delete_tag">Delete tag</string>
    <string name="hint_title">Title (Optional)</string>
    <string name="tags">TAGS</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="attach_images">Attach Images</string>
    <string name="image_from_file">Image from file</string>
    <string name="image_from_camera">Image from Camera</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="item_count">No. of Items to display</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="tag_count">+ %1$s</string>
    <string name="changes_saved">Changes Saved: %1$s</string>
    <string name="last_modified">Last Modified: %1$s</string>
    <string name="new_paste">New Paste</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="signed_in_as">Signed in as: %1$s</string>
    <string name="signed_out">Signed Out</string>
    <string name="google_api_inaccessible">Unable to access google APIs. Make sure you have google play services installed and it is working properly.</string>
    <string name="unsupported_data">Unsupported Data.</string>
    <string name="sign_in_message">You must log in first.</string>
    <string name="nothing_pasted">Nothing pasted :(</string>
    <string name="add_new_tag">Add a new tag</string>
    <string name="error_fetching_data">An error occurred while fetching data</string>
    <string name="end_of_data">End of Content.</string>
    <string name="select_picture">Select Picture</string>
    <string name="set_time">Set Time</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="time_string">%1$02d:%2$02d</string>
    <string name="day">day</string>
    <string name="time">time</string>
    <string name="paste_count">%1$s Pastes, %2$s Archived</string>
    <string name="notification_title">View content you saved.</string>
    <string name="notification_text">You saved %1$s pastes since %2$s</string>
    <string name="yesterday">yesterday</string>
    <string name="last_week">last week</string>
    <string name="key_ui_props">key_ui_props</string>

</resources>
