<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/drawer_item_pastes"
            android:icon="@drawable/ic_note_black_24dp"
            android:title="@string/pastes"
            />
        <item android:id="@+id/drawer_item_archived"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/archived"
            />
        <item android:id="@+id/drawer_item_tag_header"
            android:title="@string/tags"
            >
            <menu>
                <group android:checkableBehavior="single"
                    android:id="@+id/drawer_item_tag_group">
                </group>
            </menu>
        </item>
    </group>
    <group android:id="@+id/uncheckable_items"
        android:checkableBehavior="none"
        >
    <item android:id="@+id/drawer_item_settings"
        android:title="@string/settings"
        android:checkable="false"
        android:icon="@drawable/ic_settings_black_24dp"
        />
    <item android:id="@+id/drawer_item_about"
        android:checkable="false"
        android:title="@string/about"
        android:icon="@drawable/ic_info_black_24dp"
        />
    </group>
</menu>