<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:icon="@drawable/ic_attachment_white_24dp"
        android:title="@string/attach_images"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/miAttachImageFromFile"
                android:icon="@drawable/ic_image_black_24dp"
                android:title="@string/image_from_file" />
            <item
                android:id="@+id/miAttachImageFromCamera"
                android:icon="@drawable/ic_photo_camera_black_24dp"
                android:title="@string/image_from_camera" />
        </menu>
    </item>
    <item
        android:id="@+id/miTag"
        android:icon="@drawable/ic_label_white_24dp"
        android:title="@string/tags"
        app:showAsAction="always" />

</menu>